<resources>
    <string name="app_name">CoolSentenceGame</string>
    <string name="title_activity_game_levels">GameLevelsActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="snackbar_message">Incorrect :(</string>
    <string name="title_activity_base_uiactivity">BaseUIActivity</string>
</resources>